Game.html main menu section

--- a/public/game.html
+++ b/public/game.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    TODO
+    <section class="state state--active" data-game="main-menu">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Kudu</h1>
+                    <p>Kudu, a new experimental HTML5 canvas game. Requires PC or laptop with couple of smartphones to play the game. Smartphones are used as a controllers by each user. Be aware that game requires at least two players to play the game.</p>
+                    <button type="button" class="btn btn--bright js--main-menu--start">Start</button>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
     <script src="js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
