--- a/public/game.html
+++ b/public/game.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="state state--active" data-game="main-menu">
+    <section class="state state--active js--state" data-game="main-menu">
         <div class="wrapper wrapper--big wrapper--centered-contents">
             <div class="grid">
                 <div class="grid__item desk--one-half lap--two-thirds">
@@ -17,6 +17,7 @@
             </div><!-- .grid -->
         </div><!-- .wrapper -->
     </section><!-- .state -->
+    <script src="js/gamestate.js"></script>
     <script src="js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
