--- a/public/game.html
+++ b/public/game.html
@@ -17,6 +17,17 @@
             </div><!-- .grid -->
         </div><!-- .wrapper -->
     </section><!-- .state -->
+    <section class="state state--inactive js--state" data-game="connecting">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Code: <span class="js--connecting--code">19AC1</span></h1>
+                    <p>Connected Players: <span class="js--connecting--players">0</span></p>
+                    <button type="button" class="btn btn--bright js--connecting--ready">Ready</button>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
     <script src="js/gamestate.js"></script>
     <script src="js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
