--- a/public/game.html
+++ b/public/game.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="state state--active js--state" data-game="main-menu">
+    <section class="state state--active js--state" data-game="loading">
+        <span class="spinner">spinner</span>
+    </section>
+    <section class="state state--inactive js--state" data-game="main-menu">
         <div class="wrapper wrapper--big wrapper--centered-contents">
             <div class="grid">
                 <div class="grid__item desk--one-half lap--two-thirds">
