Use minified gamestate.js as it's fully working now

--- a/public/game.html
+++ b/public/game.html
@@ -31,7 +31,7 @@
             </div><!-- .grid -->
         </div><!-- .wrapper -->
     </section><!-- .state -->
-    <script src="js/gamestate.js"></script>
+    <script src="js/min/gamestate.js"></script>
     <script src="js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
