--- a/public/game.html
+++ b/public/game.html
@@ -31,6 +31,48 @@
             </div><!-- .grid -->
         </div><!-- .wrapper -->
     </section><!-- .state -->
+    <section class="state state--inactive js--state" data-game="waiting-for-cars">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Waiting for other players, please stand by</h1>
+                    <p>Please choose vehicle on your phone, note that you will not be able to switch it later.</p>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
+    <section class="state state--inactive js--state" data-game="choose-map">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Choose map</h1>
+                    <p>TODO</p>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
+    <section class="state state--inactive js--state" data-game="game">
+
+    </section><!-- .state -->
+    <section class="state state--inactive js--state" data-game="scoreboard">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Scoreboard</h1>
+                    <p>TODO</p>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
+    <section class="state state--inactive js--state" data-game="waiting-for-upgrades">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Waiting for other players, please stand by</h1>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
     <script src="js/min/gamestate.js"></script>
     <script src="js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
