--- a/public/controller.html
+++ b/public/controller.html
@@ -6,7 +6,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    TODO
+    <section class="state state--active js--state" data-game="loading">
+        <span class="spinner">spinner</span>
+    </section>
+    <section class="state state--inactive js--state" data-game="enter-code">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Enter code</h1>
+                    <input type="name" class="js--enter-code--code" />
+                    <button type="button" class="btn btn--bright js--main-menu--start">Start</button>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
+    <script src="js/min/gamestate.js"></script>
+    <script src="js/controller.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
