--- a/public/controller.html
+++ b/public/controller.html
@@ -4,24 +4,31 @@
 <head>
     <title>Kudu Controller</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
     <section class="state state--active js--state" data-game="loading">
         <span class="spinner">spinner</span>
     </section>
     <section class="state state--inactive js--state" data-game="enter-code">
-        <div class="wrapper wrapper--big wrapper--centered-contents">
+        <div class="wrapper wrapper--small wrapper--centered-contents">
             <div class="grid">
                 <div class="grid__item desk--one-half lap--two-thirds">
                     <h1>Enter code</h1>
                     <input type="name" class="js--enter-code--code" />
                     <button type="button" class="btn btn--bright js--main-menu--start">Start</button>
+
+                    <div class="js--control-pad">Pad</div>
+                    <div class="js--fullscreen">Bazinga</div>
                 </div><!-- .grid__item -->
             </div><!-- .grid -->
         </div><!-- .wrapper -->
     </section><!-- .state -->
+
     <script src="js/min/gamestate.js"></script>
     <script src="js/controller.js"></script>
+    <script src="js/min/fullscreen.js"></script>
+    <script src="js/smartphone.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
