--- a/public/controller.html
+++ b/public/controller.html
@@ -17,7 +17,17 @@
                 <div class="grid__item desk--one-half lap--two-thirds">
                     <h1>Enter code</h1>
                     <input type="name" class="js--enter-code--code input" />
-                    <button type="button" class="btn btn--bright js--main-menu--start">Start</button>
+                    <button type="button" class="btn btn--bright js--enter-code--join">Join</button>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
+
+    <section class="state state--inactive js--state" data-game="waiting-for-players">
+        <div class="wrapper wrapper--big wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Waiting for other players, please stand by</h1>
                 </div><!-- .grid__item -->
             </div><!-- .grid -->
         </div><!-- .wrapper -->
