--- a/public/game.html
+++ b/public/game.html
@@ -73,7 +73,18 @@
             </div><!-- .grid -->
         </div><!-- .wrapper -->
     </section><!-- .state -->
+
+    <div class="overlay js--overlay"></div>
+    <div class="mowin mowin--branded js--mowin">
+        <div class="mowin__toolbar">
+            <a class="mowin__toobar-link icon--cancel js--mowin--close" href="#"></a>
+        </div><!-- .mowin__toolbar -->
+        <div class="mowin__container js--mowin--container"></div><!-- .mowin__container -->
+    </div><!-- .mowin -->
+
+    <script src="js/min/static.js"></script>
     <script src="js/min/gamestate.js"></script>
+    <script src="js/mowin.js"></script>
     <script src="js/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
