App.js room owner left event, browser & smartphone owner left events, disconnected event

--- a/public/controller.html
+++ b/public/controller.html
@@ -25,7 +25,7 @@
     </section><!-- .state -->
 
     <section class="state state--inactive js--state" data-game="waiting-for-players">
-        <div class="wrapper wrapper--big wrapper--centered-contents">
+        <div class="wrapper wrapper--regular wrapper--centered-contents">
             <div class="grid">
                 <div class="grid__item desk--one-half lap--two-thirds">
                     <h1>Waiting for other players, please stand by</h1>
