On Ready switch to select vehicle

--- a/public/controller.html
+++ b/public/controller.html
@@ -34,6 +34,17 @@
         </div><!-- .wrapper -->
     </section><!-- .state -->
 
+    <section class="state state--inactive js--state" data-game="select-vehicle">
+        <div class="wrapper wrapper--regular wrapper--centered-contents">
+            <div class="grid">
+                <div class="grid__item desk--one-half lap--two-thirds">
+                    <h1>Select vehicle</h1>
+                    <p>TODO</p>
+                </div><!-- .grid__item -->
+            </div><!-- .grid -->
+        </div><!-- .wrapper -->
+    </section><!-- .state -->
+
     <div class="overlay js--overlay"></div>
     <div class="mowin mowin--branded js--mowin">
         <div class="mowin__toolbar">
