.list-block class

--- a/public/controller.html
+++ b/public/controller.html
@@ -35,11 +35,28 @@
     </section><!-- .state -->
 
     <section class="state state--inactive js--state" data-game="select-vehicle">
-        <div class="wrapper wrapper--regular wrapper--centered-contents">
+        <div class="wrapper wrapper--small wrapper--centered-contents">
             <div class="grid">
-                <div class="grid__item desk--one-half lap--two-thirds">
-                    <h1>Select vehicle</h1>
-                    <p>TODO</p>
+                <div class="grid__item portable--one-third">
+                    <div class="car car--a">
+                        <img src="images/car.png" alt="Car" />
+                        <ul class="car__specs list-block">
+                            <li class="car__spec car__spec--name">Red Tiger</li>
+                            <li class="car__spec car__spec--armor">1203</li>
+                            <li class="car__spec car__spec--speed">123</li>
+                            <li class="car__spec car__spec--power">546</li>
+                        </ul><!-- .car__specs -->
+                    </div><!-- .car -->
+                </div><!-- .grid__item --><!--
+             --><div class="grid__item portable--one-third">
+                    <div class="car car--b">
+                        <img src="images/car.png" alt="Car" />
+                    </div><!-- .car -->
+                </div><!-- .grid__item --><!--
+             --><div class="grid__item portable--one-third">
+                    <div class="car car--c">
+                        <img src="images/car.png" alt="Car" />
+                    </div><!-- .car -->
                 </div><!-- .grid__item -->
             </div><!-- .grid -->
         </div><!-- .wrapper -->
