--- a/public/controller.html
+++ b/public/controller.html
@@ -47,7 +47,7 @@
             <div class="container__inner">
                 <div class="container text--centered">
                     <ul class="list-inline">
-                        <li class="portable--four-twelfths js--select-vehicle car">
+                        <li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
                             <img src="images/car.png" class="car-specs__item__image" />
                             <span class="car-specs__item__name epsilon js--select-vehicle--name">Red Tiger</span>
                             <ul class="list-block car-specs">
@@ -62,7 +62,7 @@
                                 </li><!-- .car-specs__item -->
                             </ul><!-- .car__specs -->
                         </li><!-- .car --><!--
-                     --><li class="portable--four-twelfths js--select-vehicle car">
+                     --><li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
                             <img src="images/car.png" class="car-specs__item__image" />
                             <span class="car-specs__item__name epsilon js--select-vehicle--name">Red Tiger</span>
                             <ul class="list-block car-specs">
@@ -77,7 +77,7 @@
                                 </li><!-- .car-specs__item -->
                             </ul><!-- .car__specs -->
                         </li><!-- .car --><!--
-                     --><li class="portable--four-twelfths js--select-vehicle car">
+                     --><li class="portable--four-twelfths js--select-vehicle car" data-vehicle-name="">
                             <img src="images/car.png" class="car-specs__item__image" />
                             <span class="car-specs__item__name epsilon js--select-vehicle--name">Red Tiger</span>
                             <ul class="list-block car-specs">
@@ -109,7 +109,7 @@
     </div><!-- .yell -->
 
 
-    <script src="js/min/shared.js"></script>
+    <script src="js/shared.js"></script>
     <script src="js/min/gamestate.js"></script>
     <script src="js/yell.js"></script>
     <script src="js/fullscreen.js"></script>
